test_regress/t/t_alias2_unsup.out
%Error-UNSUPPORTED: t/t_alias2_unsup.v:39:4: Unsupported: alias statements
   39 |    alias b = {a[3:0],a[7:4]};
      |    ^~~~~
%Error: Exiting due to
